# WebAPI-BasedDRF

./: .coveragerc  README.md  docker-compose.yml  init_project.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tox.ini
infra/mysql/: dockerfile  my.cnf
infra/python/: dockerfile
src/: dev-requirements.txt  requirements.txt  uwsgi.ini
src/common/logger/: custom_logger.py
src/common/utils/: models.py
src/sampleapp/: views.py
src/user/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
src/user/migrations/: 0001_initial.py
src/webapi/: settings.py  urls.py
tests/: test_ex1.py
tests/user/: conftest.py  test_models.py
